--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,8 +6,9 @@
 
 @import "./blocks/_header.scss";
 @import "./blocks/_newbrands.scss";
-@import "./blocks/_signup.scss";
 @import "./blocks/_hotsales.scss";
 @import "./blocks/_featured.scss";
+@import "./blocks/_signup.scss";
+@import "./blocks/_product.scss";
 @import "./blocks/_ouradvantage.scss";
 @import "./blocks/_footer.scss";
