--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -1,11 +1,11 @@
 @font-face {
-    font-family: 'Lato';
-    src: url('../fonts/LatoRegular.eot');
-    src: url('../fonts/LatoRegular.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/LatoRegular.woff2') format('woff2'),
-        url('../fonts/LatoRegular.woff') format('woff'),
-        url('../fonts/LatoRegular.ttf') format('truetype'),
-        url('../fonts/LatoRegular.svg#LatoRegular') format('svg');
+    font-family: "Lato";
+    src: url("../fonts/LatoRegular.eot");
+    src: url("../fonts/LatoRegular.eot?#iefix") format("embedded-opentype"),
+        url("../fonts/LatoRegular.woff2") format("woff2"),
+        url("../fonts/LatoRegular.woff") format("woff"),
+        url("../fonts/LatoRegular.ttf") format("truetype"),
+        url("../fonts/LatoRegular.svg#LatoRegular") format("svg");
     font-weight: 400;
     font-style: normal;
     font-stretch: normal;
@@ -13,13 +13,13 @@
 }
 
 @font-face {
-    font-family: 'LatoBlack';
-    src: url('../fonts/LatoBlack.eot');
-    src: url('../fonts/LatoBlack.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/LatoBlack.woff2') format('woff2'),
-        url('../fonts/LatoBlack.woff') format('woff'),
-        url('../fonts/LatoBlack.ttf') format('truetype'),
-        url('../fonts/LatoBlack.svg#LatoBlack') format('svg');
+    font-family: "LatoBlack";
+    src: url("../fonts/LatoBlack.eot");
+    src: url("../fonts/LatoBlack.eot?#iefix") format("embedded-opentype"),
+        url("../fonts/LatoBlack.woff2") format("woff2"),
+        url("../fonts/LatoBlack.woff") format("woff"),
+        url("../fonts/LatoBlack.ttf") format("truetype"),
+        url("../fonts/LatoBlack.svg#LatoBlack") format("svg");
     font-weight: 900;
     font-style: normal;
     font-stretch: normal;
