--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,10 +1,12 @@
 $bg-color-main: #222;
 $bg-color-new-brands: #F1E4E6;
-$bg-color-signup: #F8F3F4;
+$bg-color-miniheader: #F8F3F4;
 $bg-color-user-input: #E1E1E1;
 $bg-color-itemcards: #F8F8F8;
 $bg-color-active-item: #3A3838DB;
-$bg_color-submit-btn: #E05C6E;
+$bg-color-submit-btn: #E05C6E;
+$bg-color-slider: #F7F7F7;
+
 
 $text-color-alt: #F16D7F;
 $text-color-negative: #FFF;
@@ -12,6 +14,7 @@ $text-color-featured: #9F9F9F;
 $text-color-itemcards: #5D5D5D;
 $text-color-advantages: #FBFBFB;
 $text-color-signup: #B1B1B1;
+$text-color-textnav: #636363;
 
 $border-color: #A4A4A4;
 
