--- a/css/style.css
+++ b/css/style.css
@@ -241,6 +241,233 @@ table {
   }
 }
 
+@-webkit-keyframes stretching-text {
+  0% {
+    letter-spacing: 0;
+  }
+  50% {
+    letter-spacing: 3px;
+  }
+  100% {
+    letter-spacing: 0;
+  }
+}
+
+@keyframes stretching-text {
+  0% {
+    letter-spacing: 0;
+  }
+  50% {
+    letter-spacing: 3px;
+  }
+  100% {
+    letter-spacing: 0;
+  }
+}
+@-webkit-keyframes rotate-scale-up {
+  0% {
+    transform: scale(1) rotateZ(0);
+  }
+  50% {
+    transform: scale(2) rotateZ(180deg);
+  }
+  100% {
+    transform: scale(1) rotateZ(360deg);
+  }
+}
+@keyframes rotate-scale-up {
+  0% {
+    transform: scale(1) rotateZ(0);
+  }
+  50% {
+    transform: scale(2) rotateZ(180deg);
+  }
+  100% {
+    transform: scale(1) rotateZ(360deg);
+  }
+}
+@-webkit-keyframes scale-up-ver-top {
+  0% {
+    transform: scaleY(0.4);
+    transform-origin: 100% 0%;
+  }
+  100% {
+    transform: scaleY(1);
+    transform-origin: 100% 0%;
+  }
+}
+@keyframes scale-up-ver-top {
+  0% {
+    transform: scaleY(0.4);
+    transform-origin: 100% 0%;
+  }
+  100% {
+    transform: scaleY(1);
+    transform-origin: 100% 0%;
+  }
+}
+@-webkit-keyframes slide-in-fwd-center {
+  0% {
+    transform: translateZ(-1400px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateZ(0);
+    opacity: 1;
+  }
+}
+@keyframes slide-in-fwd-center {
+  0% {
+    transform: translateZ(-1400px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateZ(0);
+    opacity: 1;
+  }
+}
+@-webkit-keyframes text-blur-out {
+  0% {
+    filter: blur(0.01);
+  }
+  100% {
+    filter: blur(12px) opacity(0%);
+  }
+}
+@keyframes text-blur-out {
+  0% {
+    filter: blur(0.01);
+  }
+  100% {
+    filter: blur(12px) opacity(0%);
+  }
+}
+@-webkit-keyframes vibrate-1 {
+  0% {
+    transform: translate(0);
+  }
+  20% {
+    transform: translate(-2px, 2px);
+  }
+  40% {
+    transform: translate(-2px, -2px);
+  }
+  60% {
+    transform: translate(2px, 2px);
+  }
+  80% {
+    transform: translate(2px, -2px);
+  }
+  100% {
+    transform: translate(0);
+  }
+}
+@keyframes vibrate-1 {
+  0% {
+    transform: translate(0);
+  }
+  20% {
+    transform: translate(-2px, 2px);
+  }
+  40% {
+    transform: translate(-2px, -2px);
+  }
+  60% {
+    transform: translate(2px, 2px);
+  }
+  80% {
+    transform: translate(2px, -2px);
+  }
+  100% {
+    transform: translate(0);
+  }
+}
+.header__menu-nav {
+  position: absolute;
+  z-index: 2;
+  background-color: #FFF;
+  min-width: 230px;
+  height: 600px;
+  right: -230px;
+  top: 75px;
+  box-shadow: 6px 4px 35px rgba(0, 0, 0, 0.21);
+  display: none;
+}
+@media (max-width: 1599px) {
+  .header__menu-nav {
+    right: 0;
+  }
+}
+@media (max-width: 767px) {
+  .header__menu-nav {
+    right: 50%;
+  }
+}
+.header__menu-nav-showed {
+  -webkit-animation: scale-up-ver-top 0.5s ease-out both;
+          animation: scale-up-ver-top 0.5s ease-out both;
+  display: block;
+}
+
+.menu-nav__title {
+  font-family: "Lato";
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 17px;
+  text-transform: uppercase;
+  margin: 40px 0 5px 35px;
+}
+.menu-nav__subtitle {
+  font-family: "Lato";
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 17px;
+  text-transform: uppercase;
+  color: #F16D7F;
+  margin: 20px 0 5px 35px;
+  cursor: pointer;
+}
+.menu-nav__subtitle:hover {
+  -webkit-animation: stretching-text 2s infinite 0s;
+          animation: stretching-text 2s infinite 0s;
+}
+.menu-nav__item-list-subitem {
+  font-family: "Lato";
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 17px;
+  margin: 10px 0 10px 55px;
+  cursor: pointer;
+}
+.menu-nav__item-list-subitem:hover {
+  -webkit-animation: stretching-text 2s infinite 0s;
+          animation: stretching-text 2s infinite 0s;
+}
+.menu-nav__closetab {
+  position: absolute;
+  z-index: 2;
+  top: 15px;
+  right: 15px;
+}
+.menu-nav__closetab:hover {
+  cursor: pointer;
+  transform: rotate(360deg);
+  animation: rotate-scale-up 0.65s linear 100ms reverse;
+}
+.menu-nav-cover {
+  display: none;
+}
+.menu-nav-cover-showed {
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+  -webkit-animation: slide-in-fwd-center 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+          animation: slide-in-fwd-center 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+  z-index: 1;
+  display: block;
+}
+
 .header {
   background-color: #222;
 }
@@ -250,19 +477,6 @@ table {
   align-items: center;
   min-height: 75px;
   position: relative;
-}
-.header__menu-nav {
-  position: absolute;
-  z-index: 2;
-  background-color: #FFF;
-  min-width: 230px;
-  min-height: 765px;
-  right: -230px;
-  bottom: -765px;
-  display: none;
-}
-.header__menu-nav-showed {
-  display: block;
 }
 .header__search {
   border: none;
@@ -293,6 +507,7 @@ table {
 }
 .new-brands__imgs {
   width: 48%;
+  z-index: 0;
 }
 @media (max-width: 767px) {
   .new-brands__imgs {
@@ -630,10 +845,12 @@ table {
   border: solid 1px;
   margin-top: 30px;
   padding: 15px 40px;
+  transition: all 0.4s ease-in-out;
 }
 .featured__items-seeall:hover {
   background-color: #F16D7F;
   color: #FFF;
+  transition: all 0.8s ease-in-out;
 }
 @media (max-width: 1599px) {
   .featured__items-seeall {
@@ -649,6 +866,7 @@ table {
 .featured__items:hover .featured__active-item:before,
 .featured__items:hover .featured__items-btn {
   display: block;
+  animation: text-blur-out 0.4s cubic-bezier(0.55, 0.085, 0.68, 0.53) reverse both;
 }
 
 .signup__title {
@@ -842,6 +1060,10 @@ table {
   right: 30px;
   top: 19px;
 }
+.form__user-submit:focus {
+  -webkit-animation: vibrate-1 0.3s linear 2 both;
+          animation: vibrate-1 0.3s linear 2 both;
+}
 .form__field-usergender {
   margin-top: 20px;
 }
@@ -972,6 +1194,173 @@ table {
   width: 62px;
   border: 3px solid red;
   margin-top: 12px;
+}
+
+.incart {
+  margin: 96px 0 128px;
+  max-width: 57%;
+}
+@media (max-width: 1599px) {
+  .incart {
+    max-width: 100%;
+  }
+}
+@media (max-width: 767px) {
+  .incart {
+    margin: 7px 0 48px;
+  }
+}
+.incart__itemcard {
+  min-height: 305px;
+  margin-top: 40px;
+  background-color: #FFF;
+  filter: drop-shadow(17px 19px 24px rgba(0, 0, 0, 0.13));
+}
+@media (max-width: 1599px) {
+  .incart__itemcard {
+    max-width: 100%;
+  }
+}
+@media (max-width: 767px) {
+  .incart__itemcard {
+    min-height: 188px;
+    margin-top: 32px;
+  }
+}
+.incart__btns {
+  display: flex;
+  justify-content: space-between;
+}
+@media (max-width: 1599px) {
+  .incart__btns {
+    justify-content: space-around;
+  }
+}
+.incart__btns-style {
+  font-family: "Lato";
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 17px;
+  text-transform: uppercase;
+  width: 235px;
+  height: 50px;
+  background-color: #FFF;
+  border: 1px solid #A4A4A4;
+  margin-top: 72px;
+  transition: all 0.4s ease-in-out;
+}
+@media (max-width: 767px) {
+  .incart__btns-style {
+    font-family: "Lato";
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 14px;
+    text-transform: normal;
+    width: 175px;
+    height: 32px;
+  }
+}
+.incart__btns-style:hover {
+  color: #FFF;
+  background-color: #E05C6E;
+  border: 1px solid #E05C6E;
+  transition: all 0.8s ease-in-out;
+}
+
+.itemcard {
+  position: relative;
+}
+.itemcard__productname {
+  font-family: "Lato";
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 29px;
+  text-transform: uppercase;
+  width: 260px;
+  padding-top: 22px;
+}
+@media (max-width: 767px) {
+  .itemcard__productname {
+    font-family: "Lato";
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 19px;
+    width: 144px;
+  }
+}
+.itemcard__listproperties {
+  margin: 35px 0 55px;
+}
+@media (max-width: 767px) {
+  .itemcard__listproperties {
+    margin: 26px 0 38px;
+  }
+}
+.itemcard__img {
+  max-width: 35%;
+  margin-right: 32px;
+}
+@media (max-width: 767px) {
+  .itemcard__img {
+    max-width: 40%;
+    margin-right: 18px;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+}
+.itemcard__closetab {
+  position: absolute;
+  top: 28px;
+  right: 22px;
+}
+@media (max-width: 767px) {
+  .itemcard__closetab {
+    top: 18px;
+    right: 12px;
+  }
+}
+
+.prtylist__prc-option {
+  color: #F16D7F;
+}
+
+.prtydesc {
+  font-family: "Lato";
+  font-size: 22px;
+  font-weight: 400;
+  line-height: 26px;
+  padding: 3px 0;
+}
+@media (max-width: 767px) {
+  .prtydesc {
+    font-family: "Lato";
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 17px;
+  }
+}
+.prtydesc__qty-option {
+  font-family: "Lato";
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 22px;
+  width: 42px;
+  text-align: center;
+  -moz-appearance: textfield;
+  margin-left: 24px;
+}
+@media (max-width: 767px) {
+  .prtydesc__qty-option {
+    font-family: "Lato";
+    font-size: 10px;
+    font-weight: 400;
+    line-height: 12px;
+    margin-left: 15px;
+  }
+}
+
+.inlinerow {
+  display: flex;
 }
 
 .our-advantage {
@@ -1248,9 +1637,10 @@ table {
   border-radius: 0px 25px 25px 0px;
   padding: 5px;
   border: 2px solid #F16D7F;
+  transition: all 0.4s ease-in-out;
 }
 .email-form__user-submit:hover {
-  transition: all 0.8s ease;
+  transition: all 0.8s ease-in-out;
   background-color: #E05C6E;
   border: 2px solid #E05C6E;
   cursor: pointer;
