--- a/scss/blocks/_signup.scss
+++ b/scss/blocks/_signup.scss
@@ -158,6 +158,10 @@
             right: 30px;
             top: 19px;
         }
+
+        &:focus {
+            animation: vibrate-1 0.3s linear 2 both;
+        }
     }
 
     &__field-usergender {
