--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,12 +3,15 @@
 @import "./_variables.scss";
 @import "./_mixins.scss";
 @import "./_general.scss";
+@import "./_animations.scss";
 
+@import "./blocks/_navmenu.scss";
 @import "./blocks/_header.scss";
 @import "./blocks/_newbrands.scss";
 @import "./blocks/_hotsales.scss";
 @import "./blocks/_featured.scss";
 @import "./blocks/_signup.scss";
 @import "./blocks/_product.scss";
+@import "./blocks/_cart.scss";
 @import "./blocks/_ouradvantage.scss";
 @import "./blocks/_footer.scss";
