--- a/css/style.css
+++ b/css/style.css
@@ -1197,17 +1197,18 @@ table {
 }
 
 .incart {
-  margin: 96px 0 128px;
-  max-width: 57%;
+  margin: 74px 0 128px;
+  min-width: 57%;
 }
 @media (max-width: 1599px) {
   .incart {
-    max-width: 100%;
+    margin: 59px 0 64px;
+    min-width: 100%;
   }
 }
 @media (max-width: 767px) {
   .incart {
-    margin: 7px 0 48px;
+    margin: 39px 0 48px;
   }
 }
 .incart__itemcard {
@@ -1299,13 +1300,13 @@ table {
 .itemcard__img {
   max-width: 35%;
   margin-right: 32px;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 @media (max-width: 767px) {
   .itemcard__img {
     max-width: 40%;
     margin-right: 18px;
-    -o-object-fit: cover;
-       object-fit: cover;
   }
 }
 .itemcard__closetab {
@@ -1318,10 +1319,6 @@ table {
     top: 18px;
     right: 12px;
   }
-}
-
-.prtylist__prc-option {
-  color: #F16D7F;
 }
 
 .prtydesc {
@@ -1359,8 +1356,152 @@ table {
   }
 }
 
+.proceed {
+  min-width: 360px;
+  margin-top: 113px;
+}
+@media (max-width: 1599px) {
+  .proceed {
+    margin-top: 0px;
+    display: flex;
+    justify-content: space-around;
+  }
+}
+@media (max-width: 767px) {
+  .proceed {
+    flex-direction: column;
+  }
+}
+.proceed__title {
+  font-family: "Lato";
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 19px;
+  color: #222;
+  text-transform: uppercase;
+}
+.proceed__text-small {
+  font-family: "Lato";
+  font-size: 11px;
+  font-weight: 400;
+  line-height: 13px;
+  padding: 39px 34px 0 0;
+}
+.proceed__text-large {
+  font-family: "Lato";
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 19px;
+  margin: 12px 34px 39px 0;
+}
+.proceed__text-pad {
+  padding-left: 30px;
+}
+.proceed__formfields {
+  min-width: 360px;
+}
+.proceed__userinput {
+  width: 100%;
+  margin-top: 20px;
+  padding: 13px 17px 16px 17px;
+  border: 1px solid #A4A4A4;
+}
+.proceed__checkout {
+  width: 360px;
+  height: 214px;
+  background-color: #F5F3F3;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+@media (max-width: 767px) {
+  .proceed__checkout {
+    align-self: center;
+    margin-bottom: 96px;
+  }
+}
+.proceed__quotebtn {
+  font-family: "Lato";
+  font-size: 11px;
+  font-weight: 300;
+  line-height: 13px;
+  text-transform: uppercase;
+  width: 100px;
+  height: 35px;
+  background-color: #fff;
+  border: 1px solid #A4A4A4;
+  margin: 24px 0 58px;
+  transition: all 0.4s ease-in-out;
+}
+@media (max-width: 1599px) {
+  .proceed__quotebtn {
+    margin: 24px 0 128px;
+  }
+}
+@media (max-width: 767px) {
+  .proceed__quotebtn {
+    font-family: "Lato";
+    font-size: 11px;
+    font-weight: 400;
+    line-height: 13px;
+    text-transform: none;
+    margin: 24px 0 48px;
+  }
+}
+.proceed__quotebtn:hover {
+  color: #FFF;
+  background-color: #E05C6E;
+  border: 1px solid #E05C6E;
+  transition: all 0.8s ease-in-out;
+}
+.proceed__checkoutbtn {
+  font-family: "Lato";
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 19px;
+  text-transform: uppercase;
+  color: #FFF;
+  width: 275px;
+  height: 50px;
+  background-color: #E05C6E;
+  border: none;
+  position: relative;
+  transition: all 0.4s ease-in-out;
+}
+.proceed__checkoutbtn:hover {
+  transition: all 0.8s ease-in-out;
+  background-color: #222;
+}
+.proceed__checkoutbtn:before {
+  width: 275px;
+  height: 1px;
+  background-color: #E2E2E2;
+  left: 0px;
+  top: -17px;
+  content: "";
+  position: absolute;
+}
+
+.textclr-pink {
+  color: #F16D7F;
+}
+
 .inlinerow {
   display: flex;
+}
+
+.cartinfo {
+  display: flex;
+  justify-content: space-between;
+}
+@media (max-width: 1599px) {
+  .cartinfo {
+    flex-direction: column;
+  }
+}
+.proceedtext {
+  color: #222;
+  align-self: end;
 }
 
 .our-advantage {
